--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.cs linguist-language=C#
+*.cs linguist-language=csharp
 *.rpy linguist-language=Python 
